prevent icons from wrapping to new line in long text

--- a/src/App.css
+++ b/src/App.css
@@ -282,3 +282,18 @@ body.dark-mode .TodoWrapper {
   background-color: transparent;
 }
 
+.icons {
+  display: flex;
+  flex-wrap: nowrap;
+  justify-content: flex-end;
+  align-items: center;
+  gap: 10px;
+}
+
+@media only screen and (max-width: 500px) {
+  .icons {
+      flex-direction: row;
+      gap: 1px;
+      margin-left: 2px;
+  }
+}
